--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "consistent-return": [2, "tab"],
     "no-console": "off",
     "no-lonely-if": "error",
-    "no-script-url": ["error"] 
+    "no-script-url": ["error"],
+    "no-var": ["error"] 
   }
 }
