--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,17 @@
     "jQuery": true,
     "$": true
   },
+  "parserOptions": {
+        "ecmaVersion": 2017
+    },
   "env": {
     // I write for browser
     "browser": true,
     // in CommonJS
-    "node": true
-  },
+    "node": true,
+    "es6": true
+    },
+ 
   // To give you an idea how to override rule options:
   "rules": {
     "no-empty-function": [1, { "allow": ["functions"] }],
